# model-validation

./: .gitignore  README.md  azure_recognizer.py  pyproject.toml  requirements.txt  run_recognizer.ipynb  run_recognizer_wav2vec2.ipynb  run_recognizer_whisper.ipynb  run_validation.ipynb  test_phonemes.ipynb
results/: classifier_data.csv  phoneme_azure_results.csv  phoneme_ljspeech_results.csv  phoneme_results.csv  phoneme_timit_results.csv  phoneme_whisper_results.csv  phoneme_whisper_turbo16_results.csv
