[project]
name = "model-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "phonemizer>=3.3.0",
    "protobuf>=6.33.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
